--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  folder_permission:
+    git: 
+      url: https://github.com/paraspithadiya10/folder_permission
+      ref: main
+
   fetch_folder_files:
     # When depending on this package from a real application you should use:
     #   fetch_folder_files: ^x.y.z
